centered setings menu, made elements bigger

--- a/FitBoard/Notifications/Notifications.css
+++ b/FitBoard/Notifications/Notifications.css
@@ -223,6 +223,7 @@
 	--gray: #202229;
 }
 
+/* Notification Contianer CSS */
 .main_content .notif_container{
     background-color: bisque;
     width: 85vw;
