--- a/FitBoard/Settings/Settings.css
+++ b/FitBoard/Settings/Settings.css
@@ -208,7 +208,7 @@
 	border-radius: 10px;
 }
 
-.colour_slider {
+.primary_colour_slider {
 	-webkit-appearance: none;	/*overrides default look*/
 	width: 50%;
 	height: 30px;
@@ -223,7 +223,7 @@
 	margin-left: 20vw
   }
   
-.colour_slider::-webkit-slider-thumb {
+.primary_colour_slider::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	appearance: none;
 	width: 40px;
@@ -234,7 +234,41 @@
 	cursor: pointer;
   }
   
-.colour_slider::-moz-range-thumb {
+.primary_colour_slider::-moz-range-thumb {
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: #04AA6D;
+	cursor: pointer;
+  }
+
+  .secondary_colour_slider {
+	-webkit-appearance: none;	/*overrides default look*/
+	width: 50%;
+	height: 30px;
+	border-radius: 20px;  
+	background: #d3d3d3;
+	outline: none;
+	opacity: 0.7;
+	-webkit-transition: .2s;
+	transition: opacity .2s;
+	box-shadow: inset 1px 1px 1px;
+	margin-top: 20vh;
+	margin-left: 20vw
+  }
+  
+.secondary_colour_slider::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%; 
+	background: #04AA6D;
+	box-shadow: 1px 1px;
+	cursor: pointer;
+  }
+  
+.secondary_colour_slider::-moz-range-thumb {
 	width: 25px;
 	height: 25px;
 	border-radius: 50%;
