--- a/FitBoard/Program Modification/Program Modification.css
+++ b/FitBoard/Program Modification/Program Modification.css
@@ -14,7 +14,7 @@
   border: 2px solid #000000;
   padding: 2px 5px;
   margin: 10px;
-  margin-top: 5px;
+  margin-top: 50px;
   width: 150px;
   height: 35px;
 }
@@ -42,19 +42,19 @@ th, td {
 }
 
 th.Col_1{
-  width: 60%;
+  width: 55%;
 }
 
 th.Col_2{
-  width: 20%;
+  width: 15%;
 }
 
 th.Col_3{
-  width: 20%;
+  width: 15%;
 }
 
 th.Col_4{
-  width: 180px;
+  width: 15%;
   text-align: center;
 }
 
@@ -87,7 +87,7 @@ input {
   cursor: pointer;  
   background: #2cdd85;  
   color: #ffffff;  
-  width: 140px;
+  width: 155px;
   height: 25px;
   &:hover {  
       background: darken(#2cdd85, 10%);  
@@ -168,6 +168,7 @@ input {
 }
 
 .Save_Program {
+  font-size: medium;
   outline: none;
   border: none;
   padding: 5px 5px;
@@ -177,10 +178,12 @@ input {
   background: #2cdd85;
   color: #ffffff;
   width: 140px;
-  height: 25px;
+  height: 30px;
+  border-radius: 10px;
 }
 
 .Discard_Changes {
+  font-size: medium;
   outline: none;
   border: none;
   padding: 5px 5px;
@@ -189,8 +192,9 @@ input {
   cursor: pointer;
   background: #e62100;
   color: #ffffff;
-  width: 140px;
-  height: 25px;
+  width: 175px;
+  height: 30px;
+  border-radius: 10px;
 }
 
 button:disabled {
