--- a/FitBoard/Settings/Settings.css
+++ b/FitBoard/Settings/Settings.css
@@ -183,11 +183,13 @@
 	top: 0;
 	left: 80px;
 	background-color: var(--gray);
+	transition: all 0.5s ease;
 	width: 94.75vw;
 	max-width: 100%;
 	padding: 1rem;
 	opacity: 1;
 }
+
 
 .main_content:not(.dark-mode) {
 	background-color: white
@@ -482,4 +484,3 @@
   }
 
 
-  
