--- a/FitBoard/Help/Help.css
+++ b/FitBoard/Help/Help.css
@@ -21,14 +21,14 @@
 
 /* Sidebar Styles */
 .sidebar {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh; /* 100% of the viewport height */
     width: 80px;
     background-color: black;
     transition: all 0.5s ease;
-    padding: 0.4rem 0.8rem; /* Padding using rem */
+    padding: 0.4rem 0.8rem;
 }
 
 #sub-heading {
