--- a/FitBoard/Settings/Settings.css
+++ b/FitBoard/Settings/Settings.css
@@ -15,14 +15,14 @@
 }
 
 .sidebar {
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100vh;
-	width: 80px;
-	background-color: black;
-	transition: all 0.5s ease;
-	padding: 0.4rem 0.8rem;									/*rem refers to the font-size of the root element. So padding: 0.2rem on the p tag will be interpreted as 0.2 times 18px which is 3.6px.*/
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh; /* 100% of the viewport height */
+    width: 80px;
+    background-color: black;
+    transition: all 0.5s ease;
+    padding: 0.4rem 0.8rem;
 }
 
 .sidebar.active{
