--- a/FitBoard/Program Modification/Program Modification.css
+++ b/FitBoard/Program Modification/Program Modification.css
@@ -217,14 +217,14 @@ button:disabled {
 
 /* Sidebar Styles */
 .sidebar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 80px;
-    background-color: black;
-    transition: all 0.5s ease;
-    padding: 0.4rem 0.8rem; /* Padding using rem */
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh; /* 100% of the viewport height */
+  width: 80px;
+  background-color: black;
+  transition: all 0.5s ease;
+  padding: 0.4rem 0.8rem;
 }
 
 #sub-heading {
