--- a/FitBoard/Profile/Profile.css
+++ b/FitBoard/Profile/Profile.css
@@ -405,7 +405,7 @@ textarea {
 
 .img-preview {
     width: 100%;
-    height: auto;
+    height: 100%;
     max-height: 200px;
     border: 1px solid #ddd;
     margin-top: 10px;
@@ -417,7 +417,6 @@ textarea {
     justify-content: flex-end;
     align-items: flex-end; /* Align items to the bottom */
     flex-grow: 1; /* Allow the footer to grow to take up available space */
-    margin-top: auto; /* Push the footer to the bottom */
 }
 
 #btnCrop {
